settings: Fix alignment issues for non-English languages.
Due to differences in length of the words for different languages
there were alignment issues in the organization profile settings.

This commit uses flexbox to ensure that the alignment stays correct
for any changes in language/word length.

Fixes #21385

--- a/static/styles/image_upload_widget.css
+++ b/static/styles/image_upload_widget.css
@@ -24,19 +24,40 @@
         border-radius: 5px;
     }
 
+    .image_upload_button {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        border-radius: 5px;
+        box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
+        z-index: 99;
+    }
+
     .image-delete-button {
         background: none;
         border: none;
         cursor: pointer;
         color: hsl(0, 0%, 75%);
         opacity: 0;
-        padding: 3px 0;
+        padding: 0;
         position: absolute;
         font-size: 2rem;
         top: 10px;
         right: 10px;
         z-index: 99;
         line-height: 20px;
+    }
+
+    .image-delete-text,
+    .image-upload-text,
+    .image-disabled-text {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 0 10px;
     }
 
     .image-delete-button:focus,
@@ -121,19 +142,6 @@
 
 /* CSS related to settings page user avatar upload widget only */
 #user-avatar-upload-widget {
-    .image_upload_button {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        border-radius: 5px;
-        box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
-        z-index: 99;
-    }
-
     .image-disabled-text {
         color: hsl(0, 0%, 85%);
         cursor: not-allowed;
@@ -145,14 +153,6 @@
 
     .image-delete-button {
         font-size: 3rem;
-    }
-
-    .image-delete-text,
-    .image-upload-text,
-    .image-disabled-text {
-        box-sizing: border-box;
-        width: 100%;
-        padding: 0 10px;
     }
 
     .image_upload_spinner {
@@ -190,16 +190,6 @@
     border-radius: 5px;
     box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
 
-    .image-delete-text {
-        top: 40px;
-        right: 18px;
-    }
-
-    .image-upload-text {
-        top: 40px;
-        right: 18px;
-    }
-
     .image_upload_spinner {
         width: 40px;
         height: 40px;
@@ -219,13 +209,6 @@
     width: 220px;
     height: 55px;
     text-align: center;
-    margin: 0 80px 0 20px;
-
-    .image-upload-text,
-    .image-delete-text {
-        top: 17px;
-        right: 80px;
-    }
 
     .upload-spinner-background {
         left: 0;
@@ -236,6 +219,11 @@
         height: 55px;
         top: 5%;
         right: 40%;
+    }
+
+    .image-delete-button {
+        top: 5px;
+        right: 5px;
     }
 }
 
@@ -248,9 +236,15 @@
 }
 
 .realm-logo-block {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
 }
 
-.realm-logo-title {
-    padding-left: 30%;
+.realm-logo-group {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
